tests/fixtures/invalid/str_sub_str.py
# Cannot subtract Str and Str
x: str = "hello" - "hello"
